white space fixed

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body{
 
 #what-do-text{
     text-align: center;
+    margin: 0;
 }
 
 .what-do-banner{
@@ -135,6 +136,7 @@ body{
     background-color: rgb(16, 14, 23);
     height: 600px;
     color: white;
+    
 }
 .what-do-details{
     padding: 20px;
@@ -147,4 +149,9 @@ body{
     color: rgb(212, 212, 212);
     text-align: center;
     height: auto;
+    
+}
+#footer-text{
+    margin: 0;
+    padding: 20px 0;
 }
